Optimize Open Graph tags for better social sharing (Kakao, Facebook)

--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
   <!-- SEO: Open Graph (Facebook, KakaoTalk) -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://product-builder-lecture-1eu.pages.dev/">
-  <meta property="og:title" content="오늘 뭐 먹지? | 점심 저녁 메뉴 추천 & 랜덤 음식 결정">
-  <meta property="og:description" content="매일 먹는 밥, 고민하지 마세요. 클릭 한 번으로 한식, 중식, 일식, 양식, 야식 메뉴를 랜덤 추천해드립니다.">
-  <meta property="og:image" content="https://product-builder-lecture-1eu.pages.dev/favicon.svg">
+  <meta property="og:title" content="🍚 오늘 뭐 먹지? | 3초 만에 메뉴 결정">
+  <meta property="og:description" content="맨날 고민하는 점심/저녁 메뉴... AI가 딱 정해드립니다! 한식, 중식, 일식, 양식, 야식 랜덤 추천 🎲">
+  <meta property="og:image" content="https://images.unsplash.com/photo-1555939594-58d7cb561ad1?q=80&w=1200&auto=format&fit=crop">
   <meta property="og:locale" content="ko_KR">
   <meta property="og:site_name" content="오늘 뭐 먹지?">
 
   <!-- SEO: Twitter Card -->
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="오늘 뭐 먹지? | 메뉴 고민 끝!">
-  <meta name="twitter:description" content="클릭 한 번으로 오늘의 식사 메뉴를 정해드립니다.">
-  <meta name="twitter:image" content="https://product-builder-lecture-1eu.pages.dev/favicon.svg">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="🍚 오늘 뭐 먹지? | 3초 만에 메뉴 결정">
+  <meta name="twitter:description" content="결정 장애 해결! 한식/중식/일식/양식/야식 랜덤 메뉴 추천기">
+  <meta name="twitter:image" content="https://images.unsplash.com/photo-1555939594-58d7cb561ad1?q=80&w=1200&auto=format&fit=crop">
 
   <!-- SEO: Structured Data (JSON-LD) -->
   <script type="application/ld+json">
