--- a/index.html
+++ b/index.html
@@ -344,19 +344,20 @@
 
     .food-image-box {
       width: 100%;
-      aspect-ratio: 16 / 9;
-      background: rgba(0,0,0,0.05);
+      height: 300px; /* 고정 높이로 변경하여 안정감 확보 */
+      background: #f8f9fa; /* 밝은 회색 배경 */
       position: relative;
       display: flex;
       align-items: center;
       justify-content: center;
       overflow: hidden;
+      border-bottom: 1px solid var(--border-color);
     }
     
     .food-image {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain; /* 이미지 전체가 보이도록 설정 */
       display: block;
       transition: opacity 0.3s;
     }
@@ -582,11 +583,13 @@
       { ko: '타코', en: 'Tacos', type: '양식' },
       { ko: '오므라이스', en: 'Omurice', type: '양식' },
 
-      { ko: '치킨', en: 'Fried Chicken', type: '야식' },
+      { ko: '치킨', en: 'Fried Chicken', type: '야식' }, // '치킨'은 보통 '치킨 (음식)' 등으로 리다이렉트됨. 구체적으로 '양념치킨' 등 사용 고려
+      { ko: '양념치킨', en: 'Yangnyeom Chicken', type: '야식' }, // 치킨 대신 더 확실한 양념치킨 추가
+      { ko: '프라이드 치킨', en: 'Fried Chicken', type: '야식' }, // 치킨 대신 구체적 명칭
       { ko: '족발', en: 'Pig Trotters', type: '야식' },
-      { ko: '곱창', en: 'Grilled Tripe', type: '야식' },
-      { ko: '마라샹궈', en: 'Mala Xiang Guo', type: '야식' },
-      { ko: '찜닭', en: 'Jjimdak', type: '야식' },
+      { ko: '곱창 구이', en: 'Grilled Tripe', type: '야식' }, // '곱창' -> '곱창 구이'
+      { ko: '마라탕', en: 'Mala Xiang Guo', type: '야식' },
+      { ko: '안동찜닭', en: 'Jjimdak', type: '야식' }, // '찜닭' -> '안동찜닭' (문서명 확인 필요)
       { ko: '아구찜', en: 'Spicy Braised Monkfish', type: '야식' },
       { ko: '닭발 (음식)', en: 'Chicken Feet', type: '야식' } // (음식) 추가
     ];
